# clash-rule-providers-generator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  multistage.Dockerfile  push git.bat  pyproject.toml
.github/workflows/: docker-image.yml
src/: generate_clash_config.py  server.py
